--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,16 @@
 
                 <a class="green-button" href="">Button</a>
             </div>
+            <div class="social-container">
+                <ul class="social-icons d-flex justify-content-center mt-5">
+                    <li><a href="#" class="social-square"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#" class="social-square"><i class="fa fa-dribbble"></i></a></li>
+                    <li><a href="#" class="social-square"><i class="fa fa-github"></i></a></li>
+                    <li><a href="#" class="social-square"><i class="fa fa-stack-overflow"></i></a></li>
+                </ul>
+            </div>
         </div>
     </section>
-
 
     <script src="js/scripts.min.js"></script>
 </body>
